--- a/src/main/resources/webroot/cv.html
+++ b/src/main/resources/webroot/cv.html
@@ -12,7 +12,7 @@
     <script src="lib/bootstrap.min.js"></script>
     <script src="lib/angular.min.js"></script>
 
-    <script src="cv.js"></script>
+    <script src="cvio.js"></script>
   </head>
   <body>
 
@@ -27,7 +27,7 @@
 
       <!-- Navigation -->
       <div>
-        <a href="index.html"
+        <a href="/"
            class="btn btn-default btn-md">
           <span class="glyphicon glyphicon-chevron-left"></span> &Uuml;ersicht
         </a>
@@ -38,72 +38,6 @@
         </button>
       </div>
       <br/>
-
-
-      <!-- Skills -->
-      <div ng-controller="SkillCtrl">
-        <ul class="nav nav-pills">
-          <li class="active"><a href="#" ng-click="selection = 'prog'" data-toggle="tab">Programmierung</a></li>
-          <li><a href="#" ng-click="selection = 'tooling'" data-toggle="tab">Tools</a></li>
-          <li><a href="#" ng-click="selection = 'test'" data-toggle="tab">Testing</a></li>
-          <li><a href="#" ng-click="selection = 'paradigm'" data-toggle="tab">Konzepte</a></li>
-        </ul>
-        <div class="panel panel-default">
-          <div id="all-items-box" class="connectedSortable panel-body">
-            <div ng-repeat="item in ratingItems | filter:byCategory(selection)"
-                 style="display: inline-block; margin: 4px; padding: 2px; padding-left: 6px; padding-right: 6px; border: solid 1px #cccccc; border-radius: 3px;">{{item.name}} <small><span style="color: #cccccc" class="glyphicon glyphicon-remove"></span></small></div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-
-        <div class="col-lg-4">
-          <div class="panel panel-default" style="min-height: 300px">
-            <div class="panel-heading clearfix">
-              <span class="panel-title"><strong>Anfänger</strong></span>
-              <span class="input-group pull-right" style="width: 180px;">
-                <input type="text" class="input-sm form-control">
-                <span class="input-group-btn">
-                  <button class="input-sm btn btn-default" type="button">Hinzu</button>
-                </span>
-              </span>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="panel panel-default"  style="min-height: 300px">
-            <div class="panel-heading clearfix">
-              <span class="panel-title"><strong>Fortgeschritten</strong></span>
-              <span class="input-group pull-right" style="width: 180px;">
-                <input type="text" class="input-sm form-control">
-                <span class="input-group-btn">
-                  <button class="input-sm btn btn-default" type="button">Hinzu</button>
-                </span>
-              </span>
-            </div>
-            <div class="connectedSortable panel-body" id="advanced-box">
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="panel panel-default"  style="min-height: 300px">
-            <div class="panel-heading clearfix">
-              <span class="panel-title"><strong>Experte</strong></span>
-              <span class="input-group pull-right" style="width: 180px;">
-                <input type="text" class="input-sm form-control">
-                <span class="input-group-btn">
-                  <button class="input-sm btn btn-default" type="button">Hinzu</button>
-                </span>
-              </span>
-            </div>
-            <div class="connectedSortable panel-body" id="expert-box">
-            </div>
-          </div>
-        </div>
-
-      </div>
 
       <!-- Allgemeine Daten -->
       <div class="panel panel-default">
@@ -270,6 +204,70 @@
         </div>
       </div>
 
+      <!-- Skills -->
+      <div ng-controller="SkillCtrl">
+        <ul class="nav nav-pills">
+          <li class="active"><a href="#" ng-click="selection = 'prog'" data-toggle="tab">Programmierung</a></li>
+          <li><a href="#" ng-click="selection = 'tooling'" data-toggle="tab">Tools</a></li>
+          <li><a href="#" ng-click="selection = 'test'" data-toggle="tab">Testing</a></li>
+          <li><a href="#" ng-click="selection = 'paradigm'" data-toggle="tab">Konzepte</a></li>
+        </ul>
+        <div class="panel panel-default">
+          <div id="all-items-box" class="connectedSortable panel-body">
+            <div ng-repeat="item in ratingItems | filter:byCategory(selection)"
+                 style="display: inline-block; margin: 4px; padding: 2px; padding-left: 6px; padding-right: 6px; border: solid 1px #cccccc; border-radius: 3px;">{{item.name}} <small><span style="color: #cccccc" class="glyphicon glyphicon-remove"></span></small></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+
+        <div class="col-lg-4">
+          <div class="panel panel-default" style="min-height: 300px">
+            <div class="panel-heading clearfix">
+              <span class="panel-title"><strong>Anfänger</strong></span>
+              <span class="input-group pull-right" style="width: 180px;">
+                <input type="text" class="input-sm form-control">
+                <span class="input-group-btn">
+                  <button class="input-sm btn btn-default" type="button">Hinzu</button>
+                </span>
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="panel panel-default"  style="min-height: 300px">
+            <div class="panel-heading clearfix">
+              <span class="panel-title"><strong>Fortgeschritten</strong></span>
+              <span class="input-group pull-right" style="width: 180px;">
+                <input type="text" class="input-sm form-control">
+                <span class="input-group-btn">
+                  <button class="input-sm btn btn-default" type="button">Hinzu</button>
+                </span>
+              </span>
+            </div>
+            <div class="connectedSortable panel-body" id="advanced-box">
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="panel panel-default"  style="min-height: 300px">
+            <div class="panel-heading clearfix">
+              <span class="panel-title"><strong>Experte</strong></span>
+              <span class="input-group pull-right" style="width: 180px;">
+                <input type="text" class="input-sm form-control">
+                <span class="input-group-btn">
+                  <button class="input-sm btn btn-default" type="button">Hinzu</button>
+                </span>
+              </span>
+            </div>
+            <div class="connectedSortable panel-body" id="expert-box">
+            </div>
+          </div>
+        </div>
+
+      </div>
 
     </div>
   </body>
