--- a/src/main/resources/webroot/cv.html
+++ b/src/main/resources/webroot/cv.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="cv">
+<html ng-app="cvio">
   <head>
     <title>Profil verwalten</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
