--- a/src/main/resources/webroot/index.htm
+++ b/src/main/resources/webroot/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="cv">
+<html ng-app="cvio">
   <head>
     <title>Profile</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
