--- a/src/main/resources/webroot/index.htm
+++ b/src/main/resources/webroot/index.htm
@@ -11,6 +11,7 @@
     <script src="lib/ui/jquery-ui.js"></script>
     <script src="lib/bootstrap.min.js"></script>
     <script src="lib/angular.min.js"></script>
+    <script src="lib/angular-resource.min.js"></script>
  
    <script src="cvio.js"></script>
   </head>
