--- a/src/main/resources/webroot/cv.html
+++ b/src/main/resources/webroot/cv.html
@@ -219,10 +219,10 @@
 
       <div>
         <ul class="nav nav-pills">
-          <li class="active" ng-repeat="category in categories"><a href="#" ng-click="setCategorySelection(category.id)" data-toggle="tab">{{category.name}}</a></li>
+          <li ng-class="{active: category.id == categorySelection}" ng-repeat="category in categories"><a href="#" ng-click="setCategorySelection(category.id)" data-toggle="tab">{{category.name}}</a></li>
         </ul>
         <div class="panel panel-default">
-          <div id="all-items-box" class="connectedSortable panel-body">
+          <div id="all-items-box" class="connectedSortable panel-body" style="min-height: 150px;">
             <div id="skill_item_{{item.id}}" ng-repeat="item in ratingItems | filter:byCategory(categorySelection)"
                  style="display: inline-block; margin: 4px; padding: 2px; padding-left: 6px; padding-right: 6px; border: solid 1px #cccccc; border-radius: 3px;">{{item.name}}</div>
           </div>
