finished the search with autocomplete

--- a/src/main/resources/webroot/cv.html
+++ b/src/main/resources/webroot/cv.html
@@ -13,6 +13,7 @@
     <script src="lib/bootstrap.min.js"></script>
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-resource.min.js"></script>
+    <script src="lib/ui-bootstrap-tpls.min.js"></script>    
     <script src="cvio.js"></script>
   </head>
   <body>
@@ -235,7 +236,7 @@
           <div class="panel panel-default">
             <div class="panel-heading clearfix">
               <span class="panel-title"><strong>{{skillLevelHeader['beginner']}}</strong></span>
-              <cv-skill-entry label="Hinzu" submit-function="addNewSkill(newSkill.beginner, 'beginner')" ng-model="newSkill.beginner"></cv-skill-entry>
+              <cv-skill-entry label="Hinzu" skill-list="skillItems" submit-function="addNewSkill(newSkill.beginner, 'beginner')" ng-model="newSkill.beginner"></cv-skill-entry>
             </div>
             <div style="height: 250px;" class="panel-body" id="beginner">
                 <div ng-repeat="item in skillItems | filter:bySkillSelection('beginner')"
@@ -251,7 +252,7 @@
           <div class="panel panel-default">
             <div class="panel-heading clearfix">
               <span class="panel-title"><strong>{{skillLevelHeader['advanced'] }}</strong></span>
-              <cv-skill-entry label="Hinzu" submit-function="addNewSkill(newSkill.advanced, 'advanced')" ng-model="newSkill.advanced"></cv-skill-entry>
+              <cv-skill-entry label="Hinzu" skill-list="skillItems" submit-function="addNewSkill(newSkill.advanced, 'advanced')" ng-model="newSkill.advanced"></cv-skill-entry>
             </div>
             <div style="height: 250px;" class="panel-body" id="advanced">
 
@@ -268,7 +269,7 @@
           <div class="panel panel-default">
             <div class="panel-heading clearfix">
               <span class="panel-title"><strong>{{skillLevelHeader['expert']}}</strong></span>
-              <cv-skill-entry label="Hinzu" submit-function="addNewSkill(newSkill.expert, 'expert')" ng-model="newSkill.expert"></cv-skill-entry>
+              <cv-skill-entry label="Hinzu" skill-list="skillItems" submit-function="addNewSkill(newSkill.expert, 'expert')" ng-model="newSkill.expert"></cv-skill-entry>
             </div>
             <div style="height: 250px;" class="panel-body" id="expert">
 
