Add delete function for cv

--- a/src/main/resources/webroot/index.htm
+++ b/src/main/resources/webroot/index.htm
@@ -60,8 +60,9 @@
             <td><a href="cv.html?ref={{cv.ref}}"><span class="glyphicon glyphicon-pencil"></span></a></td>
             <td><a href="cv.html?ref={{cv.ref}}">{{cv.familyName}}</a></td>
             <td><a href="cv.html?ref={{cv.ref}}">{{cv.givenName}}</a></td>
+            <td><button class="btn btn-default btn-md" ng-click="deleteCV(cv.ref)" type="button"><span class="glyphicon glyphicon-trash"></span></button></td>
             <td ng-repeat="item in searchSkillItems" style="text-align: right;">{{cv.skills[item.id]}}</td>
-            <td ng-if="searchSkillItems.length > 0" style="text-align: right;">{{calculateSearchScorePercent(cv)}}</td>                        
+            <td ng-if="searchSkillItems.length > 0" style="text-align: right;">{{calculateSearchScorePercent(cv)}}</td>
           </tr>
         </tbody>
       </table>
