--- a/src/main/resources/webroot/index.htm
+++ b/src/main/resources/webroot/index.htm
@@ -49,7 +49,6 @@
         <thead>
           <tr>
             <th></th>
-            <th></th>
             <th>Name</th>
             <th>Vorname</th>
             <th ng-repeat="item in searchSkillItems" style="text-align: right;">{{item.name}}</th>
@@ -58,8 +57,8 @@
         </thead>
         <tbody>
           <tr ng-repeat="cv in cvs | filter:bySearchCriteria() | orderBy:calculateSearchScorePercent:true ">
-            <td><a href="cv.html?ref={{cv.ref}}"><span class="glyphicon glyphicon-pencil"></span></a></td>
-            <td><a ng-click="deleteCV(cv.ref)"><span class="glyphicon glyphicon-trash"></span></a></td>
+            <td><a href="cv.html?ref={{cv.ref}}"><span class="glyphicon glyphicon-pencil"></span></a>
+                <a style="margin-left:15px" href="#" ng-click="deleteCV(cv)"><span class="glyphicon glyphicon-trash"></span></a></td>
             <td><a href="cv.html?ref={{cv.ref}}">{{cv.familyName}}</a></td>
             <td><a href="cv.html?ref={{cv.ref}}">{{cv.givenName}}</a></td>            
             <td ng-repeat="item in searchSkillItems" style="text-align: right;">{{cv.skills[item.id]}}</td>
