[cvio] change url of cv exporting

--- a/src/main/resources/webroot/index.htm
+++ b/src/main/resources/webroot/index.htm
@@ -58,7 +58,7 @@
           <tr ng-repeat="cv in cvs | filter:bySearchCriteria() | orderBy:calculateSearchScorePercent:true ">
             <td><a title="Edit CV" href="cv.html?ref={{cv.ref}}"><span class="glyphicon glyphicon-pencil"></span></a>
                 <a title="Delete CV" style="margin-left:15px" href="#" ng-click="deleteCV(cv)"><span class="glyphicon glyphicon-trash"></span></a>
-                <a title="Download CV" style="margin-left:15px" href="http://127.0.0.1:8080/api/export/doc/{{cv.id}}"><span class="glyphicon glyphicon-download"></span></a>
+                <a title="Download CV" style="margin-left:15px" href="{{host}}api/export/doc/{{cv.id}}"><span class="glyphicon glyphicon-download"></span></a>
             </td>
             <td><a href="cv.html?ref={{cv.ref}}">{{cv.familyName}}</a></td>
             <td><a href="cv.html?ref={{cv.ref}}">{{cv.givenName}}</a></td>            
