--- a/src/main/resources/webroot/cv.html
+++ b/src/main/resources/webroot/cv.html
@@ -38,7 +38,7 @@
 	          <span ng-if="! modified" class="glyphicon glyphicon-floppy-saved text-success"></span>
 	          Speichern
 	        </button>
-            <a href="http://127.0.0.1:8080/api/export/doc/{{exportId}}" class="btn btn-default btn-md">
+            <a href="{{host}}api/export/doc/{{exportId}}" class="btn btn-default btn-md">
                	<span class="glyphicon glyphicon-download" style="margin-right:5px"></span>Download
             </a>
         </div>
