--- a/src/main/resources/webroot/index.htm
+++ b/src/main/resources/webroot/index.htm
@@ -23,7 +23,7 @@
         
       <h1>Profile verwalten</h1>
       <div>
-        <a href="cv.html"
+        <a id="btnCreateCV" href="cv.html"
            class="btn btn-default btn-md">
           <span class="glyphicon glyphicon-plus"></span> Neuer CV
         </a>
