--- a/src/main/resources/webroot/index.htm
+++ b/src/main/resources/webroot/index.htm
@@ -40,19 +40,27 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-9" style="padding-left: 0px;" 
+				<div class="col-md-4" style="padding-left: 0px;" 
 				    ng-class="{'has-error':seachTermError, 'has-success': filterIDs.length > 0}">
-				        <span class="control-label">Suche:</span>
-						<span class="btn-group" style="width: 280px;">                            
-                            <span class="searchtool glyphicon glyphicon-search control-label"></span>
+						<span class="input-group">           
+						    <span class="input-group-addon glyphicon glyphicon-search"></span>                 
+                            <!-- <span class="searchtool glyphicon glyphicon-search control-label"></span> -->
 						    <input
-							type="text" class="input-sm form-control"							
-							ng-model="seachTerm"> 
-                            <!-- <span class="searchclear glyphicon glyphicon-remove-circle control-label"></span> -->
-
-						</span>						
-                         <input type="checkbox" class="input-sm" ng-model="appendAsterixToSearch"> * anhängen
-                         <a target="_blank" href="http://www.elasticsearch.org/guide/en/elasticsearch/reference/current/query-dsl-query-string-query.html#query-string-syntax">(Experten Syntax)</a>
+						     placeholder="Suchausdruck"
+							 type="text" class="input-sm form-control"							
+							 ng-model="seachTerm"
+							 auto-focus> 
+							 <span class="input-group-btn">
+                               <button class="btn btn-sm btn-default" ng-class="{'active':appendAsterixToSearch}" ng-click="appendAsterixToSearch=true">*</button>
+                               <button class="btn btn-sm btn-default" ng-class="{'active':!appendAsterixToSearch}" ng-click="appendAsterixToSearch=false">exakt</button>
+                             </span>
+						</span>						                        
+                </div>
+                <div class="col-md-3" style="line-height: 37px; padding-left:0px;">
+                   <a target="_blank" href="http://www.elasticsearch.org/guide/en/elasticsearch/reference/current/query-dsl-query-string-query.html#query-string-syntax">(Experten Syntax)</a>
+                </div>
+                
+                <div class="col-md-2">                
                 </div>
 				<div class="col-md-3" style="padding-right: 0px;">
 					<cv-skill-entry  class="pull-right"  label="Skill Filter" skill-list="skillItems"
