--- a/src/main/resources/webroot/index.htm
+++ b/src/main/resources/webroot/index.htm
@@ -27,6 +27,10 @@
            class="btn btn-default btn-md">
           <span class="glyphicon glyphicon-plus"></span> Neuer CV
         </a>
+        <a id="skillManagement" href="skillManagement.html"
+           class="btn btn-default btn-md">
+             Skills verwalten
+        </a>
       </div>
       <br/>
 		<div class="container">
